.provarCaches/00D5f000005vwGkEAI/objects/rstk__solinedist__c.object
<CustomObject>
    <description>solinedist__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solinedist_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>When the percentage for a given distribution account is specified, the amount value is calculated and stored in this field. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinedist_comments__c</fullName>
        <description>Comments may optionally be added to clarify why a given distribution line is being used.  Those comments are stored in this field. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__solinedist_pct__c</fullName>
        <description>The user identifies the percentage of the sales order line amount that is to be directed to this sales account. The sum of the percentage on the distribution lines cannot exceed 100% and any amount less than 100% is applied to the account specified on the order line. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__solinedist_salesacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the sales account that is to be used for this distribution line. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Ord Line Account Distriubtion</relationshipLabel>
        <relationshipName>solinedists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solinedist_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__solinedist_soline__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipName>solinedists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Ord Line Account Distriubtion</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SOLINEDIST Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ord Line Account Distriubtion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>